收藏 && 注册登录功能开发

--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="icon" type="image/svg+xml" href="/star.svg" />
-    <title>stellarium-anime</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="icon" type="image/svg+xml" href="/star.svg"/>
+
+  <!--      cloudflare组件-->
+  <link rel="preconnect" href="https://challenges.cloudflare.com">
+  <script
+      src="https://challenges.cloudflare.com/turnstile/v0/api.js"
+      async
+      defer
+  ></script>
+  <!--      cloudflare组件 END-->
+  <title>stellarium-anime</title>
+</head>
+<body>
+<div id="app"></div>
+<script type="module" src="/src/main.js"></script>
+</body>
 </html>
